htmxology-macros/src/components_controller/snapshots/htmxology_macros__components_controller__snapshot_tests__component_with_single_param.snap
---
source: htmxology-macros/src/components_controller/mod.rs
expression: test_components_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::AsComponent<'_, BlogController, (u32,)> for AppController {
        fn as_component_controller(&self, args: (u32,)) -> BlogController {
            <BlogController>::from((self, args.0))
        }
    }
    #[derive(Debug, Clone, htmxology::Route)]
    pub enum AppRoute {
        #[route("blog/{blog_id}/")]
        Blog {
            blog_id: u32,
            #[subroute]
            subroute: <BlogController as htmxology::Controller>::Route,
        },
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = ();
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
        ) -> Result<axum::response::Response, axum::response::Response> {
            match route {
                Self::Route::Blog { blog_id, subroute } => {
                    self.get_component_with::<BlogController>((blog_id,))
                        .handle_request(subroute, htmx, parts, server_info)
                        .await
                }
            }
        }
    }
}
